--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,12 @@ header span {
     color: rgb(255, 0, 0);
     text-align: center;
     font-weight: bold;
-    padding: 10px 0px 0px 0px;
+    padding: 10px 0px;
 }
 
 .topClick {
     color: white;
-    background-color: rgb(255, 0, 0);
+    background-color: orange;
     font-size: 14px;
     padding: 10px;
     border-radius: 10px;
